<resources>
    <string name="app_name">Bill Buddy</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="logout">Logout</string>
    <string name="login_here">Login Here</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="finish_edit">Complete Edit</string>
    <string name="title_activity_register">Register</string>
    <string name="hisName">Bazooka Joe</string>
    <string name="myName">Mort</string>
    <string name="nameLabel">username: </string>
    <string name="Rate">Rate: </string>
    <string name="Rating">Rating: </string>
    <string name="mortRating">4.7</string>
    <string name="joeRating">3.5</string>
    <string name="Rating1">1</string>
    <string name="Rating2">2</string>
    <string name="Rating3">3</string>
    <string name="Rating4">4</string>
    <string name="Rating5">5</string>
</resources>
