<?xml version="1.0" encoding="utf-8"?>


<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/paper_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!--android:background="?attr/colorPrimary"-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#248f48"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bLogin"
            android:text="@string/login"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:text="@string/register_here"
            android:paddingTop="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
